--- a/css/style.css
+++ b/css/style.css
@@ -105,17 +105,16 @@ body {
   justify-content: space-around;
 }
 
-.welcome-section-text{
-
+#welcome{
+    padding: 30px 0 80px 0;
 }
+
+
 
 .welcome-section .welcome-section-text {
     width: 578px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  /* justify-content:flex-start; */
-  text-align: left;
 
 }
 
@@ -133,7 +132,7 @@ body {
   font-family: "Inter", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 30px; /* 166.667% */
+  line-height: 30px;
 
 }
 
@@ -141,9 +140,11 @@ body {
   color: #fff;
   text-align: center;
   font-family: "Inter", sans-serif;
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 700;
   text-transform: uppercase;
+  background-color: transparent;
+  border: none;
 }
 
 .welcome-section .welcome-section-image {
@@ -151,10 +152,7 @@ body {
   width: 319.83px;
   height: 464.662px;
   padding: 0.008px 0px 0px 0px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
+
 }
 
 .welcome-section .welcome-section-image img{
