--- a/css/style.css
+++ b/css/style.css
@@ -209,8 +209,8 @@ body {
 
 /* Coming Soon section starts here  */
 
-#coming-soon{
-   padding: 10px 0 80px 0;
+#coming-soon {
+  padding: 10px 0 80px 0;
 }
 
 .coming-soon {
@@ -253,7 +253,6 @@ body {
 .coming-soon .coming-soon-section2 {
   width: 385px;
   height: 385px;
-  /* height: 463px; */
   border: 13px solid #f00;
   border-radius: 50%;
   display: flex;
@@ -263,9 +262,6 @@ body {
 
 .coming-soon .coming-soon-section2 img {
   width: 303px;
-  /* height: 364.844px; */
-  /* border-radius: 364.844px;
-background: url(<path-to-image>), lightgray -91.279px 0px / 150.038% 100% no-repeat; */
 }
 
 .coming-soon .coming-soon-section3 {
@@ -293,3 +289,113 @@ background: url(<path-to-image>), lightgray -91.279px 0px / 150.038% 100% no-rep
 }
 
 /* Coming Soon section ends here  */
+
+/* Holidays section starts here */
+
+.holidays-section {
+  width: 83%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background-color: pink; */
+}
+
+.holidays-section .holidays-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.holidays-section .holidays-text * {
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.holidays-section .holidays-text h5 {
+  color: #070211;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.holidays-section .holidays-text h1 {
+  text-align: center;
+  font-size: 60px;
+  font-weight: 900;
+  color: #070211;
+}
+
+.holidays-section .holidays-text h1 span {
+  color: #f00;
+}
+
+.holidays-section .holidays-text p {
+  /* width: 1550px; */
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 32px;
+}
+
+.holidays-section .holidays-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.holidays-section .holidays-image .holidays-image1 {
+  /* height: 433px; */
+  position: relative;
+  z-index: 1;
+}
+
+.holidays-section .holidays-image .holidays-image1 .discount-image {
+  position: absolute;
+  z-index: 3;
+  width: 206.841px;
+  /* width: 100%; */
+  /* width: 206.841px; */
+  transform: translate(230px, 103px);
+  /* height: 206.841px; */
+}
+
+.holidays-section .holidays-image .holidays-image1 .holiday1-image {
+  position: absolute;
+  z-index: 2;
+  width: 357px;
+  transform: translate(303px, 40px);
+  /* height: 433px; */
+  border-radius: 16px 16px 0px 0px;
+}
+
+.holidays-section .holidays-image .holidays-image2 {
+  /* height: 433px; */
+  /* position: relative;
+  z-index: 1; */
+  position: relative;
+   z-index: 1;
+}
+
+.holidays-section .holidays-image .holidays-image2 .holiday2 {
+  width: 600px;
+  /* width: 100%; */
+  height: 500px;
+  position: absolute;
+  transform: translate(-630px, 150px);
+  z-index: 4;
+  /* background-color: transparent; */
+}
+
+.holidays-section .holidays-image .holidays-image2 .holiday3{
+  /* width: 100%; */
+position: absolute;
+transform: translate(-660px, 400px);
+z-index: 3;
+}
+
+/* Holidays section ends here */
