--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* google font */
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Merriweather:ital,wght@0,400;0,700;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
 
 /* common style starts here */
 * {
@@ -409,7 +409,7 @@ body {
   margin-bottom: 10px;
 }
 
-.portfolio-section .portfolio-text *{
+.portfolio-section .portfolio-text * {
   margin-bottom: 20px;
 }
 
@@ -429,7 +429,7 @@ body {
 
 .portfolio-section .portfolio-text p {
   color: rgba(7, 2, 17, 0.6);
-   font-family: "Inter", sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 17px;
   font-weight: 400;
   line-height: 32px;
@@ -443,3 +443,68 @@ body {
   flex-wrap: wrap;
 }
 /* Portfolio section ends here */
+
+/* Subscribe section starts here */
+#subscribe{
+  padding: 10px 0 80px 0;
+}
+.subscribe-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
+  padding: 50px 0;
+}
+
+.subscribe-section * {
+  margin-bottom: 20px;
+}
+
+
+.subscribe-section .subscribe-text h1 {
+  color: #070211;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 900;
+  text-transform: capitalize;
+}
+
+.subscribe-section .subscribe-text p {
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 32px;
+}
+
+.subscribe-section .subscribe-form input {
+  width: 363px;
+  height: 72px;
+  background: #fff;
+  border-radius: 50px 0px 0px 50px;
+  padding-left: 30px;
+}
+
+.subscribe-section .subscribe-form button {
+  width: 175px;
+  height: 72px;
+  font-size: 17px;
+  border-radius: 0px 50px 50px 0px;
+  background: #f00;
+  color: #fff;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  text-transform: capitalize;
+}
+
+::placeholder {
+  color: rgba(7, 2, 17, 0.3);
+  font-family: "Inter", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+/* Subscribe section ends here */
